--- a/HTML/index.html
+++ b/HTML/index.html
@@ -102,8 +102,9 @@
               class="dropdown-toggle"
               data-bs-toggle="dropdown"
               style="font-size: 12px"
+              id="user"
             >
-              Sushant
+              
             </p>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" id="logout" href="#">Logout</a></li>
@@ -160,7 +161,9 @@
         <div class="container py-5">
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col-md-3">
-              <div class="card shadow-sm bg-light rounded-3 border-0 hover-effect">
+              <div
+                class="card shadow-sm bg-light rounded-3 border-0 hover-effect"
+              >
                 <img
                   src="/Images/Appoinment doctor.jpg"
                   class="card-img-top"
@@ -182,7 +185,9 @@
               </div>
             </div>
             <div class="col-12 col-lg-3">
-              <div class="card shadow-sm bg-light rounded-3 border-0 hover-effect">
+              <div
+                class="card shadow-sm bg-light rounded-3 border-0 hover-effect"
+              >
                 <img
                   src="/Images/Delivery.jpg"
                   class="card-img-top"
@@ -202,7 +207,9 @@
               </div>
             </div>
             <div class="col-12 col-lg-3">
-              <div class="card shadow-sm bg-light rounded-3 border-0 hover-effect">
+              <div
+                class="card shadow-sm bg-light rounded-3 border-0 hover-effect"
+              >
                 <img
                   src="/Images/physicalAppoinment.jpg"
                   class="card-img-top"
@@ -222,7 +229,9 @@
               </div>
             </div>
             <div class="col-12 col-lg-3">
-              <div class="card shadow-sm bg-light rounded-3 border-0 hover-effect">
+              <div
+                class="card shadow-sm bg-light rounded-3 border-0 hover-effect"
+              >
                 <img
                   src="/Images/track.jpg"
                   class="card-img-top"
@@ -270,7 +279,10 @@
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-center">
               <a href="/HTML/bmi.html">
-                <button type="button" class="btn btn-dark me-2 mt-5 rounded-5 bmi-btn">
+                <button
+                  type="button"
+                  class="btn btn-dark me-2 mt-5 rounded-5 bmi-btn"
+                >
                   Calculate BMI
                 </button>
               </a>
