--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -101,7 +101,7 @@
               />
             </div>
             <div class="text-center">
-              <button type="button" class="btn btn-primary rounded-pill px-5">
+              <button type="button" class="btn btn-primary rounded-pill px-5" id="loginBtn">
                 Login
               </button>
             </div>
