--- a/HTML/index.html
+++ b/HTML/index.html
@@ -422,6 +422,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="/JS/index.js"></script>
+    <script src="/Js/index.js"></script>
   </body>
 </html>
